--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 {\rtf1\ansi\ansicpg1252\cocoartf2511
 \cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fmodern\fcharset0 Courier;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
+{\colortbl;\red255\green255\blue255;}
+{\*\expandedcolortbl;;}
 \margl1440\margr1440\vieww10800\viewh8400\viewkind0
 \deftab720
 \pard\pardeftab720\partightenfactor0
@@ -13,6 +13,7 @@
 \
 ## User settings\
 xcuserdata/\
+.DS_Store\
 \
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)\
 *.xcscmblueprint\
